--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -19,15 +19,18 @@ nav li {
     font-size: 20px;
     padding: 20px;
 }*/
+svg{
+    margin-left: 900px;;
+}
 nav {
     justify-content: space-between;
     background-color: rgb(0, 255, 76);
-    padding: 10px 50px;
+    padding: 5px 50px;
 }
 nav li{
     list-style: none;
     display: inline-block;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-right: 60px;
     padding: 6px 0px;
 }
@@ -52,8 +55,12 @@ nav ul li a:after{
 nav ul li a:hover:after{
     width: 100%;
 }
+label { display: inline-block; width: 130px; text-align: right; }
+#sub{ display: inline-block; width: 130px; text-align: center; margin-left: 150; margin-top: 10; background-color: #05ffde; border:groove;}
+input{color: indianred; }
+/*input {display: inline-block;}
 input{border-radius: 100;}
 input{width: 10%;}
 input{height: 5%;}
 input{justify-content: space-between;}
-input{color: indianred; }
+input{color: indianred; }*/
