--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -76,6 +76,13 @@ label{
     height: 70vh;
     overflow: auto;
 }
+/*For star*/
+.fa {
+    font-size: 50px;
+  }
+  .checked {
+    color: orange;
+  }
 /*nav li a,.navbar-expand-lg{
     color: var(--bs-orange) !important;
     text-shadow: -.5px -.5px 0 #000, .5px -.5px 0 #000, -.5px .5px 0 #000, .5px .5px 0 #000;
