--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -6,10 +6,10 @@
 }
 body{
     color: black;
-    background-color: mediumspringgreen;
+    /*background-color: mediumspringgreen;*/
 }
 nav {
-    background-color: rgb(0, 255, 55);  
+    background-color: rgb(20, 248, 168);/*rgb(0, 255, 55);*/  
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -41,12 +41,12 @@ h4{
 }
 .dropdown-menu{
     justify-content: space-between;
-    background-color: rgb(0, 255, 76);
+    background-color: rgb(20, 248, 168);/*rgb(0, 255, 76);*/
     padding: 15px 15px;
 }
 .navbar-light{
     justify-content: space-between;
-    background-color: rgb(0, 255, 76);
+    background-color: rgb(20, 248, 168);/*rgb(0, 255, 76);*/
     padding: 0px 50px;
     
 }
