--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -83,6 +83,31 @@ label{
   .checked {
     color: orange;
   }
+.pagination-box{
+    padding: 15px;
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    background-color: rgb(0, 255, 76);
+    border-radius: 5px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+ul.pagination{
+    margin: 0;
+    
+}
+li.page-item{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+a.page-link{
+    text-align: center;
+    padding: 11px 20.4px;
+    border-radius: 5px;
+    font-size: 22px;
+}
 /*nav li a,.navbar-expand-lg{
     color: var(--bs-orange) !important;
     text-shadow: -.5px -.5px 0 #000, .5px -.5px 0 #000, -.5px .5px 0 #000, .5px .5px 0 #000;
