--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 *{
+    margin: 0;
     box-sizing: border-box;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -89,7 +90,7 @@ label{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
-    background-color: rgb(0, 255, 76);
+    background-color: rgb(20, 248, 168);
     border-radius: 5px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
     text-align: center;
