--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -92,6 +92,7 @@ label{
     border-radius: 5px;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
     text-align: center;
+    width:50%;
 }
 ul.pagination{
     margin: 0;
