--- a/public_html/Project/styles.css
+++ b/public_html/Project/styles.css
@@ -7,7 +7,8 @@
 }
 body{
     color: black;
-    /*background-color: mediumspringgreen;*/
+    display: flex;
+    flex-direction: column;
 }
 nav {
     background-color: rgb(20, 248, 168);/*rgb(0, 255, 55);*/  
